# VogueMirror

./: README.md
vm_deps/: README.md
vm_deps/alpine_pkg/: README.md  setup.py
vm_deps/alpine_pkg/scripts/: alpine_create_project  alpine_find_project  alpine_generate_changelog  alpine_tag_changelog  alpine_test_changelog
vm_deps/alpine_pkg/src/alpine_pkg/: __init__.py  changelog.py  changelog_generator.py  changelog_generator_vcs.py  cmake.py  metaproject.py  project.py  project_templates.py  project_version.py  projects.py  python_setup.py  topological_order.py  workspaces.py
vm_deps/alpine_pkg/src/alpine_pkg/templates/: CMakeLists.txt.in  metaproject.cmake.in  project.xml.in
vm_deps/alpine_pkg/test/: test_alpine_create_project.py  test_changelog.py  test_metaproject.py  test_project.py  test_templates.py  test_topological_order.py
vm_deps/alpine_pkg/test/data/metaprojects/invalid_cmake/: CMakeLists.txt  project.xml
vm_deps/alpine_pkg/test/data/metaprojects/invalid_depends/: CMakeLists.txt  project.xml
vm_deps/alpine_pkg/test/data/metaprojects/leftover_files/: CMakeLists.txt  project.xml
vm_deps/alpine_pkg/test/data/metaprojects/no_buildtool_depend_alpine/: CMakeLists.txt  project.xml
vm_deps/alpine_pkg/test/data/metaprojects/no_cmake/: project.xml
vm_deps/alpine_pkg/test/data/metaprojects/no_metaproject_tag/: project.xml  (+1 more)
voguemirror/: README.md
voguemirror/src/alpine/: CHANGELOG.rst  CMakeLists.txt  README.md  project.xml  setup.py
voguemirror/src/alpine/cmake/: all.cmake  alpineConfig.cmake.in  alpine_add_env_hooks.cmake  alpine_destinations.cmake  alpine_generate_environment.cmake  alpine_install_python.cmake  alpine_libraries.cmake  alpine_metaproject.cmake  alpine_project.cmake  alpine_project_xml.cmake  alpine_python_setup.cmake  alpine_workspace.cmake  debug_message.cmake  em_expand.cmake  empy.cmake  interrogate_setup_dot_py.py  list_insert_in_workspace_order.cmake  order_paths.py  parse_project_xml.py  python.cmake  shell.cmake  stamp.cmake  toplevel.cmake
voguemirror/src/alpine/cmake/em/: order_projects.cmake.em  pkg.pc.em
voguemirror/src/alpine/cmake/env-hooks/: 05.alpine-test-results.bat.develspace.in  05.alpine-test-results.sh.develspace.in  05.alpine_make.bash  05.alpine_make_isolated.bash
voguemirror/src/alpine/cmake/templates/: __init__.py.in  _setup_util.py.in  cfg-extras.context.py.in  env-hook.context.py.in  env.bat.in  env.sh.in  generate_cached_setup.py.in  order_projects.context.py.in  pkg.context.pc.in  pkgConfig-version.cmake.in  pkgConfig.cmake.in  python_distutils_install.bat.in  python_distutils_install.sh.in  setup.bash.in  setup.bat.in  setup.sh.in  setup.zsh.in
voguemirror/src/alpine/cmake/test/: alpine_download_test_data.cmake  gtest.cmake  nosetests.cmake  run_tests.py  tests.cmake
voguemirror/src/alpine/cmake/tools/: bz2.cmake  doxygen.cmake  libraries.cmake  rt.cmake
voguemirror/src/alpine/python/alpine/: builder.py  cmake.py  environment_cache.py  find_in_workspaces.py  init_workspace.py  project_version.py  workspace.py
voguemirror/src/alpine/scripts/: alpine_find  alpine_init_workspace  alpine_make  alpine_make_isolated  alpine_prepare_release  alpine_project_version  alpine_test_results  alpine_topological_order
voguemirror/src/alpine/test/: utils.py
voguemirror/src/alpine/test/local_tests/: test_with_mock_workspace.py
voguemirror/src/alpine/test/mock_resources/src-fail/noproject/: CMakeLists.txt  project.xml
voguemirror/src/alpine/test/mock_resources/src/nolangs/: CMakeLists.txt  main.cpp  project.xml
voguemirror/src/alpine/test/unit_tests/: test_alpine_find.py  test_alpine_make_isolated.py  test_builder.py  test_environment_cache.py  test_find_in_workspace.py  test_init_workspace.py  test_interrogate_setup.py  test_order_projects_cmake_em.py  test_project_version.py  test_terminal_color.py  test_test_results.py  test_tidy_xml.py  test_workspace.py
voguemirror/src/cmake_modules/: CHANGELOG.rst  CMakeLists.txt  README.md  project.xml
voguemirror/src/cmake_modules/cmake/: cmake_modules-extras.cmake.installspace.in
voguemirror/src/scanner/: CHANGELOG.rst  CMakeLists.txt  README.md  project.xml
voguemirror/src/scanner/include/scanner/: capture.hpp  precomp.hpp  scanner.hpp  types.hpp
voguemirror/src/scanner/include/scanner/cuda/: device.hpp  device_array.hpp  device_memory.hpp  imgproc.hpp  internal.hpp  kernel_containers.hpp  projective_icp.hpp  safe_call.hpp  temp_utils.hpp  texture_binder.hpp  tsdf_volume.hpp
voguemirror/src/scanner/src/: capture.cpp  core.cpp  device_memory.cpp  imgproc.cpp  precomp.cpp  projective_icp.cpp  scanner.cpp  tsdf_volume.cpp
voguemirror/src/scanner/src/cuda/: imgproc.cu  projective_icp.cu  tsdf_volume.cu
voguemirror/src/scanner/tools/: vm_scanner.cpp
(+2 files in other folders)
